libft_tester/war-machine-mymac/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
lyuhansol-ui-MacBookPro.local
Darwin 21.1.0 arm64
$> date
2021년 11월 24일 수요일 20시 02분 11초 KST
$> gcc --version
Apple clang version 12.0.5 (clang-1205.0.22.9)
Target: arm64-apple-darwin21.1.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple clang version 12.0.5 (clang-1205.0.22.9)
Target: arm64-apple-darwin21.1.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'

= Compiling libft ==============================================================
$> make re
rm -f ./ft_atoi.o ./ft_bzero.o ./ft_calloc.o ./ft_isalnum.o ./ft_isalpha.o ./ft_isascii.o ./ft_isdigit.o ./ft_isprint.o ./ft_itoa.o ./ft_memchr.o ./ft_memcmp.o ./ft_memcpy.o ./ft_memmove.o ./ft_memset.o ./ft_putchar_fd.o ./ft_putendl_fd.o ./ft_putnbr_fd.o ./ft_putstr_fd.o ./ft_split.o ./ft_strchr.o ./ft_strdup.o ./ft_striteri.o ./ft_strjoin.o ./ft_strlcat.o ./ft_strlcpy.o ./ft_strlen.o ./ft_strmapi.o ./ft_strncmp.o ./ft_strnstr.o ./ft_strrchr.o ./ft_strtrim.o ./ft_substr.o ./ft_tolower.o ./ft_toupper.o ./ft_lstnew.o ./ft_lstadd_front.o ./ft_lstsize.o ./ft_lstlast.o ./ft_lstadd_back.o ./ft_lstdelone.o ./ft_lstclear.o ./ft_lstiter.o ./ft_lstmap.o
rm -f libft.a
/Library/Developer/CommandLineTools/usr/bin/make BONUS_Part=1 libft.a
gcc -Wall -Wextra -Werror -c -o  ft_lstnew.o ft_lstnew.c
gcc -Wall -Wextra -Werror -c -o  ft_lstadd_front.o ft_lstadd_front.c
gcc -Wall -Wextra -Werror -c -o  ft_lstsize.o ft_lstsize.c
gcc -Wall -Wextra -Werror -c -o  ft_lstlast.o ft_lstlast.c
gcc -Wall -Wextra -Werror -c -o  ft_lstadd_back.o ft_lstadd_back.c
gcc -Wall -Wextra -Werror -c -o  ft_lstdelone.o ft_lstdelone.c
gcc -Wall -Wextra -Werror -c -o  ft_lstclear.o ft_lstclear.c
gcc -Wall -Wextra -Werror -c -o  ft_lstiter.o ft_lstiter.c
gcc -Wall -Wextra -Werror -c -o  ft_lstmap.o ft_lstmap.c
ar rcu libft.a ft_lstnew.o ft_lstadd_front.o ft_lstsize.o ft_lstlast.o ft_lstadd_back.o ft_lstdelone.o ft_lstclear.o ft_lstiter.o ft_lstmap.o
gcc -Wall -Wextra -Werror -c -o  ft_atoi.o ft_atoi.c
gcc -Wall -Wextra -Werror -c -o  ft_bzero.o ft_bzero.c
gcc -Wall -Wextra -Werror -c -o  ft_calloc.o ft_calloc.c
gcc -Wall -Wextra -Werror -c -o  ft_isalnum.o ft_isalnum.c
gcc -Wall -Wextra -Werror -c -o  ft_isalpha.o ft_isalpha.c
gcc -Wall -Wextra -Werror -c -o  ft_isascii.o ft_isascii.c
gcc -Wall -Wextra -Werror -c -o  ft_isdigit.o ft_isdigit.c
gcc -Wall -Wextra -Werror -c -o  ft_isprint.o ft_isprint.c
gcc -Wall -Wextra -Werror -c -o  ft_itoa.o ft_itoa.c
gcc -Wall -Wextra -Werror -c -o  ft_memchr.o ft_memchr.c
gcc -Wall -Wextra -Werror -c -o  ft_memcmp.o ft_memcmp.c
gcc -Wall -Wextra -Werror -c -o  ft_memcpy.o ft_memcpy.c
gcc -Wall -Wextra -Werror -c -o  ft_memmove.o ft_memmove.c
gcc -Wall -Wextra -Werror -c -o  ft_memset.o ft_memset.c
gcc -Wall -Wextra -Werror -c -o  ft_putchar_fd.o ft_putchar_fd.c
gcc -Wall -Wextra -Werror -c -o  ft_putendl_fd.o ft_putendl_fd.c
gcc -Wall -Wextra -Werror -c -o  ft_putnbr_fd.o ft_putnbr_fd.c
gcc -Wall -Wextra -Werror -c -o  ft_putstr_fd.o ft_putstr_fd.c
gcc -Wall -Wextra -Werror -c -o  ft_split.o ft_split.c
gcc -Wall -Wextra -Werror -c -o  ft_strchr.o ft_strchr.c
gcc -Wall -Wextra -Werror -c -o  ft_strdup.o ft_strdup.c
gcc -Wall -Wextra -Werror -c -o  ft_striteri.o ft_striteri.c
gcc -Wall -Wextra -Werror -c -o  ft_strjoin.o ft_strjoin.c
gcc -Wall -Wextra -Werror -c -o  ft_strlcat.o ft_strlcat.c
gcc -Wall -Wextra -Werror -c -o  ft_strlcpy.o ft_strlcpy.c
gcc -Wall -Wextra -Werror -c -o  ft_strlen.o ft_strlen.c
gcc -Wall -Wextra -Werror -c -o  ft_strmapi.o ft_strmapi.c
gcc -Wall -Wextra -Werror -c -o  ft_strncmp.o ft_strncmp.c
gcc -Wall -Wextra -Werror -c -o  ft_strnstr.o ft_strnstr.c
gcc -Wall -Wextra -Werror -c -o  ft_strrchr.o ft_strrchr.c
gcc -Wall -Wextra -Werror -c -o  ft_strtrim.o ft_strtrim.c
gcc -Wall -Wextra -Werror -c -o  ft_substr.o ft_substr.c
gcc -Wall -Wextra -Werror -c -o  ft_tolower.o ft_tolower.c
gcc -Wall -Wextra -Werror -c -o  ft_toupper.o ft_toupper.c
ar rcu libft.a ft_atoi.o ft_bzero.o ft_calloc.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_itoa.o ft_memchr.o ft_memcmp.o ft_memcpy.o ft_memmove.o ft_memset.o ft_putchar_fd.o ft_putendl_fd.o ft_putnbr_fd.o ft_putstr_fd.o ft_split.o ft_strchr.o ft_strdup.o ft_striteri.o ft_strjoin.o ft_strlcat.o ft_strlcpy.o ft_strlen.o ft_strmapi.o ft_strncmp.o ft_strnstr.o ft_strrchr.o ft_strtrim.o ft_substr.o ft_tolower.o ft_toupper.o

$> make bonus
/Library/Developer/CommandLineTools/usr/bin/make BONUS_Part=1 libft.a
gcc -Wall -Wextra -Werror -c -o  ft_lstnew.o ft_lstnew.c
gcc -Wall -Wextra -Werror -c -o  ft_lstadd_front.o ft_lstadd_front.c
gcc -Wall -Wextra -Werror -c -o  ft_lstsize.o ft_lstsize.c
gcc -Wall -Wextra -Werror -c -o  ft_lstlast.o ft_lstlast.c
gcc -Wall -Wextra -Werror -c -o  ft_lstadd_back.o ft_lstadd_back.c
gcc -Wall -Wextra -Werror -c -o  ft_lstdelone.o ft_lstdelone.c
gcc -Wall -Wextra -Werror -c -o  ft_lstclear.o ft_lstclear.c
gcc -Wall -Wextra -Werror -c -o  ft_lstiter.o ft_lstiter.c
gcc -Wall -Wextra -Werror -c -o  ft_lstmap.o ft_lstmap.c

$> ls -la libft.a
-rw-r--r--  1 wildeengineerr  staff  36608 11 24 20:02 /Users/wildeengineerr/workplace/Cadet-42_C/libft_tester/war-machine-mymac/dirlibft/libft.a

= Bonus_functions ==============================================================

= ft_lstiter_bonus.c ===========================================================
$> norminette ft_lstiter_bonus.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_lstiter.c main.c libft.a -o user_exe

/Users/wildeengineerr/workplace/Cadet-42_C/libft_tester/war-machine-mymac/tests/Bonus_functions/ft_lstiter/main.c:85:3: error: implicit declaration of function 'ft_lstiter' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                ft_lstiter(elem, &ft_modify_list_with_d);
                ^
/Users/wildeengineerr/workplace/Cadet-42_C/libft_tester/war-machine-mymac/tests/Bonus_functions/ft_lstiter/main.c:85:3: note: did you mean 'ft_lstister'?
/Users/wildeengineerr/workplace/Cadet-42_C/libft_tester/war-machine-mymac/tests/Bonus_functions/ft_lstiter/../../../libft.h:67:6: note: 'ft_lstister' declared here
void    ft_lstister(t_list *lst, void (*f)(void *));
        ^
1 error generated.
